<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/_139951" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:breakStrategy="balanced"
            android:text="@string/msj_iniciar"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#6750A4"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginLeft="50dp"
            android:textColor="#6750A4"
            android:text="@string/lbl_usuario" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:layout_marginRight="40dp"
            android:hint="@string/txt_usuario"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textColorHint="@color/morado"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:textColor="#6750A4"
            android:text="@string/lbl_clave" />


        <EditText
            android:id="@+id/txtClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/txt_clave"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:layout_marginRight="40dp"
            android:textColorHint="@color/morado"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:onClick="validarBoton"
            android:text="@string/btn_ingresar" />


    </LinearLayout>

</LinearLayout>

