<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="validarBotones"
    tools:context=".MiApp">

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="56dp"
        android:onClick="validarBotonInicio"
        android:text="@string/btn_Iniciar_sesión"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="168dp"
        android:layout_height="120dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/registro" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="169dp"
        android:layout_height="116dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/nuevo_user" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="247dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="76dp"
        android:text="@string/lbl_Bienvenidos"
        android:textAlignment="center"
        android:textColor="#402195"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="52dp"
        android:onClick="validarBotonReg"
        android:text="@string/btn_Registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>